syntax = "proto3";

package config;

message Config {
  bytes uuid = 1;
  InitAction initaction = 2;
  sint32 connection_retries = 3;
  WorkingHours working_hours = 4;
  bytes domains = 5;
  bytes hostnames = 6;
  bytes usernames = 7;
  string spawn_to = 8;
  bool tlsuntrusted = 9;
  oneof profile {
    HttpConfig http = 10;
  }
}

message WorkingHours {
  uint32 start = 1;
  uint32 end = 2;
  bool use_system_tz = 3;
  sint32 utc_offset = 4;
}

enum InitAction {
  NONE = 0;
  THREAD = 1;
  FORK = 2;
}

message HttpConfig {
  uint32 callback_port = 1;
  uint64 killdate = 2;
  uint32 callback_jitter = 3;
  bool eke = 4;
  map<string, string> headers = 5;
  bytes aes_key = 6;
  string callback_host = 7;
  string get_uri = 8;
  string post_uri = 9;
  string query_path_name = 10;
  ProxyInfo proxy = 11;
  uint32 callback_interval = 12;
}

message ProxyInfo {
  string user = 1;
  string host = 2;
  uint32 port = 3;
  string pass = 4;
}
